[package]
name = "ianaio-worker"
version = "0.1.0"
authors = ["Jaroslaw Cichon <dev@iana.io>"]
edition = "2021"
readme = "README.md"
description = "Convenience crate for working with Web Workers"
repository = "https://github.com/ianaio/worker"
homepage = "https:///rustwasm.iana.io/worker"
license-file = "LICENSE.txt"
categories = ["api-bindings", "asynchronous", "wasm"]
rust-version = "1.80"

[package.metadata.docs.rs]
all-features = true

rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
bincode = "1"
ianaio-utils = { path = "../utils", version = "0.2" }
gloo-worker-macros = { path = "../worker-macros", version = "0.1" }
js-sys = "0.3"
pinned = "0.1.0"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4" }
futures = { version = "0.3", features = ["std"], default-features = false }
thiserror = "1.0.37"

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "BlobPropertyBag",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "Url",
    "Worker",
    "WorkerOptions",
]

[features]
default = []
futures = []

